[package]
name = "horns-of-combustion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE: make sure to update dependencies in `dynamic-linking/Cargo.toml`
dynamic-linking = { path = "dynamic-linking", optional = true }
clap = { version = "4.3.2", features = ["derive"] }
stecs = "0.1"
geng = "0.17.0"
geng-utils = "0.3.0"
image = "0.24.6"
parry2d = "0.13.4"
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.4"

[patch.crates-io]
async-broadcast = { git = "https://github.com/kuviman/async-broadcast", branch = "fix-wasm" } # TODO: until https://github.com/smol-rs/async-broadcast/pull/47 is merged
