[package]
name = "dynamic-linking"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE: should match the dependencies in `Cargo.toml`
clap = { version = "4.3.2", features = ["derive"] }
ecs = { git = "https://github.com/geng-engine/ecs", rev = "c1546e52f398d5133f6dcaca11b3eae783613ddd" }
geng = "0.17.0"
geng-utils = "0.3.0"
image = "0.24.6"
parry2d = "0.13.4"
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.4"

[patch.crates-io]
async-broadcast = { git = "https://github.com/kuviman/async-broadcast", branch = "fix-wasm" } # TODO: until https://github.com/smol-rs/async-broadcast/pull/47 is merged
